fix: messaging in game over screen
also, add test for game-over screen and reformat code